--- a/this-that/style.css
+++ b/this-that/style.css
@@ -8,7 +8,7 @@ html {
 
 body{
   font-family: mojangles, Fallback, Impact;
-  background-image: url("../Electron/resources/background.png");
+  background-image: url(./resources/background.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   width: 100%;
@@ -34,6 +34,10 @@ div.containers {
   height: 50%;
   width: 100%;
   margin: 0%;
+}
+
+#connection-div {
+  position: absolute;
 }
 
 #if-div {
@@ -74,4 +78,36 @@ div.containers {
   width: 25%;
   margin-top: 10%;
   display: inline-block;
+}
+
+#CopyButton {
+  background: url(./resources/copy.png);
+  width: 97px;
+  height: 97px;
+  position: absolute;
+  -webkit-app-region: no-drag;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+#CopyButton.hover, #CopyButton.focus {
+  background: url(./resources/copyHover.png);
+}
+
+#CopyButton.active {
+  background: url(./resources/copyPress.png);
+}
+
+input[type=text] {
+  font-family: 'mojangles', Fallback, Impact;
+  font-size: 100%;
+  font-size: 24pt;
+  color: white;
+  text-align: center;
+  width: 671px;
+  height: 97px;
+  background: url(./resources/textbox.png);
+  -webkit-app-region: no-drag;
+  border: none;
+  padding: 0px 0px 0px 0px;
 }
