--- a/this-that/style.css
+++ b/this-that/style.css
@@ -107,13 +107,13 @@ div.containers {
   background: url(./resources/copy.png);
   width: 97px;
   height: 97px;
-  right:20px;
+  right: 20px;
   top: 50px;
-
   -webkit-app-region: no-drag;
   background-repeat: no-repeat;
   background-size: 100%;
 }
+
 #RunButton{
   background: url(./resources/button.png);
   background-size:100%;
@@ -122,19 +122,31 @@ div.containers {
   font-family: mojangles, Fallback, Impact;
   font-size: large;
   display: inline-block;
-  bottom: 60px;
-  right: 60px;
+  bottom: 115px;
+  right: 50px;
   width: 160px;
   height: 60px;
   position: absolute;
   -webkit-app-region: no-drag;
   background-size: 100%;
 }
-#RunButton.hover, #CopyButton.focus{
+
+#RunButton.hover, #CopyButton.focus, #CloseButton.hover {
   background: url(./resources/buttonHover.png);
+  width: 160px;
+  height: 60px;
+  position: absolute;
+  -webkit-app-region: no-drag;
+  background-size: 100%;
 }
-#RunButton.active{
+
+#RunButton.active, #CloseButton.active {
   background: url(./resources/buttonPress.png);
+  width: 160px;
+  height: 60px;
+  position: absolute;
+  -webkit-app-region: no-drag;
+  background-size: 100%;
 }
 
 #CopyButton.hover, #CopyButton.focus {
@@ -143,6 +155,41 @@ div.containers {
 
 #CopyButton.active {
   background: url(./resources/copyPress.png);
+}
+
+#CloseButton.hover{
+  background: url(./resources/buttonHover.png);
+  width: 160px;
+  height: 60px;
+  position: absolute;
+  -webkit-app-region: no-drag;
+  background-size: 100%;
+}
+
+#CloseButton.active {
+  background: url(./resources/buttonPress.png);
+  width: 160px;
+  height: 60px;
+  position: absolute;
+  -webkit-app-region: no-drag;
+  background-size: 100%;
+}
+
+#CloseButton {
+  background: url(./resources/button.png);
+  background-size:100%;
+  text-align: center;
+  color:white;
+  font-family: mojangles, Fallback, Impact;
+  font-size: large;
+  display: inline-block;
+  bottom: 50px;
+  right: 50px;
+  width: 160px;
+  height: 60px;
+  position: absolute;
+  -webkit-app-region: no-drag;
+  background-size: 100%;
 }
 
 input[type=text] {
