--- a/this-that/results.css
+++ b/this-that/results.css
@@ -31,7 +31,7 @@ h3 {
     display: inline-block;
 }
 
-#dismiss-button {
+#DismissButton {
     background: url(./resources/button.png);
     background-size:100%;
     text-align: center;
@@ -49,11 +49,11 @@ h3 {
 
   }
   
-  #dismiss-button.hover, #dismiss-button.focus {
+  #DismissButton.hover, #DismissButton.focus {
     background: url(./resources/buttonHover.png);
   }
   
-  #dismiss-button.active {
+  #DismissButton.active {
     background: url(./resources/buttonPress.png);
   }
 
