--- a/Minecraft_Data_Sci_UI/style.css
+++ b/Minecraft_Data_Sci_UI/style.css
@@ -7,41 +7,51 @@ html {
     font-family: mojangles;
     font-size: 16px;
     width: 100%;
-    height: 100%;
+    height: 969px;
 }
 
 body {
     font-family: mojangles, Fallback, Impact;
-    background-image: url(../this-that/resources/background.png);
+    background-image: url(resources/background-altered.png);
     background-repeat: no-repeat;
-    background-size: 100% 960px;
-    margin: 48px 0% 0% 0%;
+    background-size: 100% 100%;
+    height: 100%;
+    width: 100%;
+    min-height: 100%;
+    overflow: hidden;
+    margin: 0% 4% 0% 4%;
+    padding: 0% 0% 0% 0%;
 }
 
 h1 {
     font-size: 2.6em;
     display: block;
     text-align: center;
+    width: 92%;
+    margin: 3% 0% 3% 0%;
     padding: 0% 0% 0% 0%;
 }
 
 div.text-section {
-    width: 90%;
-    height: 100%;
-    margin: 64px 5% 5% 5%;
+    width: 92%;
+    height: 70.6%;
+    max-height: 660px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
 }
 
 div.text-group {
-    width: 100%;
-    height: 100%;
-    margin: 0% 0% 0% 0%;
+    clear: both;
+    margin: 0% 0% 24px 0%;
     padding: 0% 0% 0% 0%;
 }
 
 button {
     font-family: mojangles;
     font-weight: bold;
-    background-image: url(../this-that/resources/button.png);
+    background-image: url(resources/button.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0% 0% 0% 0%;
@@ -49,44 +59,72 @@ button {
     height: 41px;
 }
 
+div.button-group {
+    width: 15%;
+    float: right;
+    clear: right;
+}
+
+div.button-group button {
+    display: block;
+}
+
+.button1, .button2 {
+    margin: 27.5px 0px 27.5px 0px;
+}
+
 button:hover {
-    background-image: url(../this-that/resources/buttonHover.png);
+    background-image: url(resources/buttonHover.png);
 }
 
 button:active {
-    background-image: url(../this-that/resources/buttonPress.png);
+    background-image: url(resources/buttonPress.png);
 }
 
-#RunButton{
+div.bottom-buttons {
+    width: 92%;
+    position: relative;
+    margin: 36px 0px 0px 33%;;
+}
+
+.bottom-buttons button {
+    margin: auto;
+    justify-content: center;
+}
+
+#run-all-button, #add-button {
     font-family: mojangles;
     font-weight: bold;
-    background-image: url(../this-that/resources/button.png);
+    background-image: url(resources/button.png);
     background-repeat: no-repeat;
     background-size: cover;
-    bottom: 115px;
-    right: 50px;
+    bottom: 0px;
+    top: 0px;
     width: 160px;
     height: 60px;
 }
-#RunButton:hover {
-    background-image: url(../this-that/resources/buttonHover.png);
+
+#run-all-button:hover, #add-button:hover {
+    background-image: url(resources/buttonHover.png);
 }
-#RunButton:active {
-    background-image: url(../this-that/resources/buttonPress.png);
+
+#run-all-button:active, #add-button:active {
+    background-image: url(resources/buttonPress.png);
 }
 
 textarea {
     color: white;
     font-size: 1.6em;
     display: block;
-    background-image: url(../this-that/resources/textbox.png);
+    background-image: url(resources/textbox.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    width: 98%;
-    height: 128px;
-    margin: 12px 2% 24px 0%;
-    padding: 1% 0% 1% 2%;
+    width: 80%;
+    height: 192px;
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
 }
+
 
 
 
