added ability for html to run python code

--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -89,7 +89,7 @@ button:active {
 }
 
 textarea {
-    color: white;
+    color: red;
     font-size: 1.6em;
     display: block;
     background-image: url(../this-that/resources/textbox.png);
