--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: mojangles;
-    src: url(../this-that/Fonts/mojangles.ttf);
+    src: url(./resources/fonts/mojangles.ttf);
 }
 
 html {
@@ -8,98 +8,115 @@ html {
     font-size: 16px;
     width: 100%;
     height: 100%;
-    margin: calc(0%) calc(0%) calc(0%) calc(0%);
-    padding: calc(0%) calc(0%) calc(0%) calc(0%);
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
 }
 
 body {
     font-family: mojangles, Fallback, Impact;
-    background-image: url(../resources/full_background.png);
+    background-image: url(./resources/full_background.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 100%;
     width: 100%;
     min-height: 100%;
     overflow: hidden;
-    margin: calc(0%) calc(0%) calc(0%) calc(0%);
-    padding: calc(0%) calc(0%) calc(0%) calc(0%);
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
 }
 
 div#header-section {
-    height: calc(7%);
-    width: calc(100%);
-    margin: calc(0%) calc(0%) calc(1%) calc(0%);
-    padding: calc(4%) calc(0%) calc(0%) calc(0%);
+    height: 7%;
+    width: 100%;
+    margin: 0% 0% 1% 0%;
+    padding: 4% 0% 0% 0%;
 }
 
 h1#ide-title {
     font-size: 2.6em;
     margin: 0em 0em 0em 0em;
-    padding: calc(0%) calc(0%) calc(0%) calc(0%);
-    height: calc(100%);
-    width: calc(100%);
+    padding: 0% 0% 0% 0%;
+    height: 100%;
+    width: 100%;
     vertical-align: middle;
     text-align: center;
     justify-content: center;
 }
 
 div#text-section {
-    width: calc(90%);
-    height: calc(72%);
+    width: 90%;
+    height: 72%;
     max-height: 660px; /* This sets the maximum area for scrolling to begin */
-    background-image: url(../resources/full_foreground.png);
+    background-image: url(./resources/full_foreground.png);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     overflow-y: scroll;
     overflow-x: hidden;
-    margin: calc(0%) calc(3%) calc(0%) calc(3%);
-    padding: calc(2%) calc(2%) calc(2%) calc(2%);
+    margin: 0% 3% 0% 3%;
+    padding: 2% 2% 2% 2%;
 }
 
 div.text-group {
     clear:left;
-    width: calc(100%);
+    width: 100%;
     height: 216px;
-    margin: calc(0%) calc(0%) calc(0%) calc(0%);
-    padding: calc(0%) calc(0%) calc(0%) calc(0%);
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
 }
 
-textarea {
+.code-input {
+    float: left;
     color: white;
-    font-size: 1.6em;
+    font-size: smaller;
+    background-color: dark;
+    background-color: rgb(69,69,69);
+    border: 4px solid black;
+    /* background-image: url(./resources/textbox.png);
+    background-repeat: no-repeat;
+    background-size: cover; */
+    width: 80%;
+    resize: vertical; 
+    margin: 0% 0% 0% 0%;
+    padding: 0.3em 0.1em 0.3em 0.1em;
+}
+
+/* div[contenteditable]{
+    float: left;
+    color: white;
+    font-size: smaller;
     display: block;
-    background-image: url(../resources/textbox.png);
+    background-image: url(./resources/textbox.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    width: calc(85%);
-    height: 192px;
-    margin: calc(0%) calc(0%) calc(0%) calc(0%);
-    padding: 10px calc(0%) 0% 10px;
-}
+    width: 80%;
+    height: 50px;
+    margin: 0% 0% 0% 0%;
+    padding: 10px 0% 0% 10px;
+} */
 
 button {
     font-family: mojangles;
     font-weight: bold;
-    background-image: url(../resources/button.png);
+    background-image: url(./resources/button.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0% 0% 0% 0%;
-    width: calc(100%);
+    width: 100%;
     height: 41px;
 }
 
 div.button-group {
     float: right;
-    width: calc(13%);
-    height: calc(100%);
-    margin: calc(0%) calc(0%) calc(0%) calc(0%);
-    padding: calc(0%) calc(0%) calc(0%) calc(0%);
+    width: 13%;
+    height: 100%;
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
     align-items: center;
 }
 
 div.button-group button {
     display: block;
-    margin: calc(1em) 0% 0% 0%;
+    margin: 1em 0% 0% 0%;
     padding: 0% 0% 0% 0%;
 }
 
@@ -108,34 +125,34 @@ div.button-group button {
 }
 
 button:hover {
-    background-image: url(../resources/buttonHover.png);
+    background-image: url(./resources/buttonHover.png);
 }
 
 button:active {
-    background-image: url(../resources/buttonPress.png);
+    background-image: url(./resources/buttonPress.png);
 }
 
 div#bottom-section {
-    height: calc(10%);
-    width: calc(90%);
-    margin: calc(0%) calc(3%) calc(0%) calc(3%);
-    padding: calc(4px) calc(0%) calc(4px) calc(0%);
+    height: 10%;
+    width: 90%;
+    margin: 0% 3% 0% 3%;
+    padding: 4px 0% 4px 0%;
     text-align: justify;
 }
 
 #run-all-button, #add-button {
     font-family: mojangles;
     font-weight: bold;
-    background-image: url(../resources/button.png);
+    background-image: url(./resources/button.png);
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 1em 0em 0em calc(25%);
+    margin: 1em 0em 0em 25%;
     width: 117px;
     height: 41px;
 }
 
 #run-all-button:hover, #add-button:hover, .run-button:hover, .remove-button:hover {
-    background-image: url(../resources/buttonHover.png);
+    background-image: url(./resources/buttonHover.png);
 }
 
 #run-all-button:active, #add-button:active, .run-button:active, .remove-button:active {
