HTTP server + Python Kernel combined in main.py

--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -65,7 +65,7 @@ div.text-group {
 }
 
 textarea {
-    color: white;
+    color: red;
     font-size: 1.6em;
     display: block;
     background-image: url(../resources/textbox.png);
