--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -36,16 +36,45 @@ h1#ide-title {
     font-size: 2.6em;
     margin: 0em 0em 0em 0em;
     padding: calc(0%) calc(0%) calc(0%) calc(0%);
-    height: calc(100%);
+    height: calc(80%);
     width: calc(100%);
     vertical-align: middle;
     text-align: center;
     justify-content: center;
 }
 
+button.minecraft-button {
+    font-family: mojangles;
+    font-weight: bold;
+    background-image: url(../resources/button.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0% 0% 0% 0%;
+    width: calc(100%);
+    height: 41px;
+}
+
+
+
+.selector-div {
+    width: calc(90%);
+    margin: calc(0%) calc(3%) calc(0%) calc(3%);
+    padding: calc(0%) calc(2%) calc(2%) calc(2%);
+}
+
+.event-selector {
+    width: calc(80%);
+    height: 64px;
+}
+
+#update-button {
+    width: 132px;
+    height: 44px;
+}
+
 div#text-section {
     width: calc(90%);
-    height: calc(72%);
+    height: calc(67%);
     max-height: 660px; /* This sets the maximum area for scrolling to begin */
     background-image: url(../resources/full_foreground.png);
     background-repeat: no-repeat;
@@ -77,17 +106,6 @@ textarea {
     padding: 10px calc(0%) 0% 10px;
 }
 
-button {
-    font-family: mojangles;
-    font-weight: bold;
-    background-image: url(../resources/button.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0% 0% 0% 0%;
-    width: calc(100%);
-    height: 41px;
-}
-
 div.button-group {
     float: right;
     width: calc(13%);
@@ -103,8 +121,19 @@ div.button-group button {
     padding: 0% 0% 0% 0%;
 }
 
-.run-button, .remove-button {
+div#bottom-section {
+    height: calc(7%);
+    width: calc(30%);
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: calc(0%) calc(35%) calc(0%) calc(35%);
+    padding: 0px 0px 0px 0px;
+}
 
+.run-button, .remove-button {
+    margin: auto;
 }
 
 button:hover {
@@ -115,13 +144,6 @@ button:active {
     background-image: url(../resources/buttonPress.png);
 }
 
-div#bottom-section {
-    height: calc(10%);
-    width: calc(90%);
-    margin: calc(0%) calc(3%) calc(0%) calc(3%);
-    padding: calc(4px) calc(0%) calc(4px) calc(0%);
-    text-align: justify;
-}
 
 #run-all-button, #add-button {
     font-family: mojangles;
@@ -129,10 +151,11 @@ div#bottom-section {
     background-image: url(../resources/button.png);
     background-repeat: no-repeat;
     background-size: cover;
-    margin: 1em 0em 0em calc(25%);
-    width: 117px;
+    margin: 0em 0em 0em 0em;
+    width: 128px;
     height: 41px;
 }
+
 
 #run-all-button:hover, #add-button:hover, .run-button:hover, .remove-button:hover {
     background-image: url(../resources/buttonHover.png);
