--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -3,6 +3,11 @@
     src: url(./resources/fonts/mojangles.ttf);
 }
 
+@font-face {
+    font-family: hack;
+    src: url(./resources/fonts/Hack-Regular.ttf);
+}
+
 html {
     font-family: mojangles;
     font-size: 16px;
@@ -26,17 +31,17 @@ body {
 }
 
 div#header-section {
-    height: 7%;
+    height: 1%;
     width: 100%;
     margin: 0% 0% 1% 0%;
-    padding: 4% 0% 0% 0%;
+    padding: 3% 0% 0% 0%;
 }
 
 h1#ide-title {
     font-size: 2.6em;
     margin: 0em 0em 0em 0em;
     padding: 0% 0% 0% 0%;
-    height: 100%;
+    height: 80%;
     width: 100%;
     vertical-align: middle;
     text-align: center;
@@ -61,7 +66,7 @@ button.minecraft-button {
 }
 
 .event-selector {
-    width: 60%;
+    width: 82%;
     height: 64px;
 }
 
@@ -72,8 +77,8 @@ button.minecraft-button {
 
 div#text-section {
     width: 90%;
-    height: 72%;
-    max-height: 660px; /* This sets the maximum area for scrolling to begin */
+    height: 74%;
+    max-height: 720px; /* This sets the maximum area for scrolling to begin */
     background-image: url(./resources/full_foreground.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -86,12 +91,12 @@ div#text-section {
 div.text-group {
     clear:left;
     width: 100%;
-    height: 216px;
+    height: 128px;
     margin: 0% 0% 0% 0%;
-    padding: 0% 0% 0% 0%;
+    padding: 1em 0% 0% 0%;
 }
 
-.code-input {
+/* .code-input {
     float: left;
     color: white;
     font-size: smaller;
@@ -102,13 +107,13 @@ div.text-group {
     resize: vertical; 
     margin: 0% 0% 0% 0%;
     padding: 0.3em 0.1em 0.3em 0.1em;
-}
+} */
 
 div.button-group {
     float: right;
     width: 13%;
     height: 100%;
-    margin: 0% 0% 0% 0%;
+    margin: 0em 0em 0em 0em;
     padding: 0% 0% 0% 0%;
     align-items: center;
 }
@@ -161,17 +166,16 @@ button:active {
     float: left;
     color: white;
     font-size: smaller;
+    font-family: hack;
+    text-decoration: none;
     background-color: dark;
     background-color: rgb(69,69,69);
     border: 4px solid black;
-    /* background-image: url(./resources/textbox.png);
-    background-repeat: no-repeat;
-    background-size: cover; */
     width: 80%;
     resize: vertical; 
     vertical-align: center;
-    margin: 0% 0% 0% 0%;
-    padding: 0.3em 0.1em 0.3em 0.1em;
+    margin: 0em 0em 0em 1em;
+    padding: 0.6em 0.6em 0.6em 0.6em;
 }
 
 #run-all-button:hover, #add-button:hover, .run-button:hover, .remove-button:hover {
