--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -162,15 +162,32 @@ button:active {
     height: 41px;
 }
 
-.code-input {
+.code-input{
     float: left;
     color: white;
     font-size: smaller;
     font-family: hack;
     text-decoration: none;
-    background-color: dark;
     background-color: rgb(69,69,69);
     border: 4px solid black;
+    width: 80%;
+    resize: vertical; 
+    vertical-align: center;
+    margin: 0em 0em 0em 1em;
+    padding: 0.6em 0.6em 0.6em 0.6em;
+}
+
+.code-output{
+    display: none;
+    float: left;
+    color: black;
+    font-size: smaller;
+    font-family: hack;
+    text-decoration: none;
+    background-color: grey;
+    border-bottom: 4px solid black;
+    border-left: 4px solid black;
+    border-right: 4px solid black;
     width: 80%;
     resize: vertical; 
     vertical-align: center;
