--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -138,7 +138,7 @@ button:active {
     background-image: url(./resources/buttonPress.png);
 }
 
-#run-all-button, #add-button {
+#run-all-button, #add-button, #dismiss-button {
     font-family: mojangles;
     font-weight: bold;
     background-image: url(./resources/button.png);
@@ -182,12 +182,62 @@ button:active {
     padding: 0.6em 0.6em 0.6em 0.6em;
 }
 
-#popUp{
-    background-image: url(./resources/full_background.png);
+#popUp {
+    background-image: url(./resources/background-altered.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
     text-align: center;
-    top: 50%;
-    left: 50%;
+    margin: 30% 0% 0% 10%;
+    height: 288px;
+}
+
+h1 {
+    margin: 0.5em 0em 0em 0em;
+}
+
+#popUp p {
+    font-size: 1.3em;
+    font-weight: bold;
+    margin: auto;
+    margin-top: 1em;
+    width: 50%;
+    padding: 10px;
+}
+
+#copy-button {
+    /* float: right; */
+    background-image: url(./resources/copy.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 48px;
+    width: 48px;
+    margin: 0em 0.5em 0em 0em;
+}
+
+#copy-input-div {
+    width: 75%;
+}
+
+#myInput {
+    float: left;
+    font-size: 1.5em;
+    height: 42px;
+    margin: 0em 0.5em 0em 30%;
+}
+
+#dismiss-button {
+    clear: both;
+    background-image: url(./resources/button.png);
+    margin: 1em 0em 0em 0em;
+}
+
+#copy-button:hover {
+    background-image: url(./resources/copyHover.png);
+}
+
+#copy-button:active {
+    background-image: url(./resources/copyPress.png);
 }
 
 #run-all-button:hover, #add-button:hover, .run-button:hover, .remove-button:hover {
