--- a/http_simple/static/style.css
+++ b/http_simple/static/style.css
@@ -266,6 +266,28 @@ h1 {
     margin-top: 2em;
 }
 
+#lessons-button{
+    margin: 0.5em 0em 0.25em 2em;
+}
+
+#lessons-window{
+    display: none;
+    position: absolute;
+    background-image: url(./resources/full_foreground.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow-y: scroll;
+    width: 100%;
+    height: 40%;
+    bottom: 0;
+    border: 3px solid blue;
+}
+
+#lessons-startpage{
+    text-align: center;
+    align-items: center;
+}
+
 #run-all-button:hover, #add-button:hover, .run-button:hover, .remove-button:hover, #copy-button:hover, #dismiss-button:hover {
     background-image: url(./resources/buttonHover.png);
 }
